# willikins

./: .gitignore  LICENSE  README.md  discord-wrapper.py  flake.nix  willikins.cabal
lib/Willikins/: LLM.hs  Memory.hs  Utils.hs
lib/Willikins/Integration/: Feed.hs  GoogleCalendar.hs
lib/Willikins/LLM/: Client.hs  Prompts.hs  Tools.hs  Types.hs
